--- a/editor/index.html
+++ b/editor/index.html
@@ -154,6 +154,8 @@
 	<button id="btn_dot">Dot</button>
 	<span>|</span>	
 	<button id="btn_trisect">Trisect</button>
+	<button id="btn_bisect">Bisect</button>
+	<button id="btn_merge">Merge</button>
 	<span>|</span>	
 	<button id="btn_slice">Slice By</button>
 	<select id="select_draw_type" >
