--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 
 <link rel="shortcut icon" type="image/x-icon" href="https://motf.io/favicon.ico">
 
-<!-- 
-
-<link rel="shortcut icon" type="image/x-icon" href="http://localhost/favicon.ico">
- -->
+<!-- <link rel="shortcut icon" type="image/x-icon" href="http://localhost/favicon.ico"> -->
 
 </head>
 
