--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
 <div id="mask"></div>
 <div id="splash_text" class="center-text">LOADING INSTRUMENTS</div>
 
-<button id="vbtn" style="display:block;">OOOOOOOOOOO</button>
+<button id="vbtn" style="display:none;"></button>
 </body>
 </html>
 
