--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
 <script src="./js/Theory.js"></script>
 <script src="./js/Chord.js"></script>
 <script src="./js/myUI.js"></script>
-<script src="./js/midi.js"></script>
+<script src="./js/midiFileReader.js"></script>
 <script src="./js/Global.js"></script>
 <script src="./js/Work.js"></script>
 <script src="./js/Importer.js"></script>
