--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 
 <!-- <script src="./js/pako.min.js"></script> -->
 <script> 
-	SERVER = "https://motf.io";
+	SERVER = ".";
 //	SERVER = "http://localhost";
 </script>
 
