--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>motf pianoroll</title>
     <link rel="stylesheet" type="text/css" href="css/editor.css" />
 
-<link rel="shortcut icon" type="image/x-icon" href="https://motf.io/favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="">
 
 </head>
 
